# Illumination-Engine

./: .clang-format  .clang-tidy  .gitignore  404.md  Asset.hpp  AssetLinking.hpp  CMakeCache.txt  CMakeLists.txt  CNAME  DownloadModels.py  GameEngine  GameEngine.cbp  GameObject.cpp  GameObject.h  GameObject.hpp  Makefile  OLD.hpp  OpenGLRenderEngine.hpp  Physics.cpp  Physics.hpp  README.md  RenderEngine.cpp  RenderEngine.h  RenderEngine.hpp  RenderEngineOld.cpp  Renderer.cpp  RendererOld.cpp  Settings.h  Settings.hpp  SyntaxGuidelines.cpp  TutorialConfig.h  TutorialConfig.h.in  VulkanRenderEngine.hpp  VulkanTutorialTheSecond.cpp  _config.yml  cmake_install.cmake  deps.tar.xz  download_models.py  index.md  main.cpp  (+2 more)
ext/: CMakeLists.txt
src/: CMakeLists.txt  DownloadModels.py  main.cpp
src/AudioModule/: AudioEngine.cpp  AudioEngine.hpp  CMakeLists.txt  Sound.hpp
src/Core/: CMakeLists.txt  Core.cpp  Core.hpp  Engine.cpp  Engine.hpp  IECoreMain.cpp  IEWindowUser.cpp  IEWindowUser.hpp  InheritableSharedFromThis.cpp  InheritableSharedFromThis.hpp  MultiDimensionalVector.cpp  MultiDimensionalVector.hpp
src/Core/AssetModule/: Aspect.cpp  Aspect.hpp  Asset.cpp  Asset.hpp  AssetManager.cpp  AssetManager.hpp  CMakeLists.txt  IEAspect.cpp  IEAspect.hpp  IEAsset.cpp  IEAsset.hpp  Instance.cpp  Instance.hpp
src/Core/EngineModule/: CMakeLists.txt  Engine.cpp  Engine.hpp  Event.cpp  Event.hpp  EventActionMapping.cpp  EventActionMapping.hpp  Window.hpp
src/Core/FileSystemModule/: CMakeLists.txt  Directory.cpp  Directory.hpp  File.cpp  File.hpp  FileSystem.cpp  FileSystem.hpp  IEDirectory.cpp  IEDirectory.hpp  IEFile.cpp  IEFile.hpp  IEFileSystem.cpp  IEFileSystem.hpp  IEFileSystemModuleMain.cpp  IEImporter.cpp  IEImporter.hpp  IETempDirectory.hpp  IETempFile.cpp  IETempFile.hpp  Importer.cpp  Importer.hpp  Stream.hpp
src/Core/InputModule/: CMakeLists.txt  InputHandler.cpp  InputHandler.hpp  Keyboard.cpp  Keyboard.hpp
src/Core/LogModule/: CMakeLists.txt  IELog.hpp  IELogModuleMain.cpp  IELogger.cpp  IELogger.hpp  Logger.cpp  Logger.hpp
src/Core/ThreadingModule/: Awaitable.cpp  Awaitable.hpp  BaseTask.cpp  BaseTask.hpp  CMakeLists.txt  CoroutineTask.cpp  CoroutineTask.hpp  EnsureThread.cpp  EnsureThread.hpp  FunctionTask.cpp  FunctionTask.hpp  JobQueue.cpp  JobQueue.hpp  MultiConditionVariable.cpp  MultiConditionVariable.hpp  Pool.cpp  Pool.hpp  Queue.cpp  Queue.hpp  ResumeAfter.cpp  ResumeAfter.hpp  ResumeOnMainThreadAfter.cpp  ResumeOnMainThreadAfter.hpp  Task.cpp  Task.hpp  ThreadPool.cpp  ThreadPool.hpp  Worker.cpp  Worker.hpp  WorkerThread.cpp  WorkerThread.hpp
src/GraphicsEngine/: Settings.hpp  graphicsModuleMain.cpp
src/GraphicsEngine/Merged/: RenderEngine.hpp  RenderEngineLink.hpp  Settings.hpp
src/GraphicsEngine/OpenGL/: CMakeLists.txt  IEGMOpenGLMain.cpp  OpenGLRenderEngine.hpp  OpenGLSettings.hpp  Settings.hpp  openglCamera.hpp  openglFramebuffer.hpp  openglGraphicsEngineLink.hpp  openglImage.hpp  openglProgram.hpp  openglRenderEngine.hpp  openglRenderable.hpp  openglSettings.hpp  openglShader.hpp  openglTexture.hpp  openglVertex.hpp
src/GraphicsEngine/Vulkan/: AccelerationStructureManager.hpp  Asset.hpp  BufferManager.hpp  CMakeLists.txt  Camera.hpp  CommandBufferManager.hpp  DescriptorSetManager.hpp  FramebufferManager.hpp  GPUData.hpp  ImageManager.hpp  PipelineManager.hpp  RasterizationPipelineManager.hpp  RayTracingPipelineManager.hpp  RenderPassManager.hpp  Settings.hpp  ShaderBindingTableManager.hpp  Vertex.hpp  VulkanGraphicsEngineLink.hpp  VulkanRenderEngine.hpp  VulkanRenderEngineRasterizer.hpp  VulkanRenderEngineRayTracer.hpp  VulkanSettings.hpp  XXXvulkanRayTracingPipeline.hpp  XXXvulkanRenderEngineRayTracer.hpp  XXXvulkanShaderBindingTable.hpp  accelerationStructureManager.hpp  asset.hpp  bufferManager.hpp  camera.hpp  commandBufferManager.hpp  descriptorSetManager.hpp  gpuData.hpp  imageManager.hpp  rasterizationPipelineManager.hpp  rayTracingPipelineManager.hpp  renderPassManager.hpp  shaderBindingTableManager.hpp  vertex.hpp  vulkanAccelerationStructure.hpp  vulkanAsset.hpp  (+22 more)
src/GraphicsModule/: CMakeLists.txt  IEAPI.cpp  IEAPI.hpp  IEAccelerationStructure.cpp  IEBuffer.cpp  IEBuffer.hpp  IECamera.cpp  IECamera.hpp  IEDependency.cpp  IEDependency.hpp  IEDependent.cpp  IEDependent.hpp  IEDescriptorSet.cpp  IEDescriptorSet.hpp  IEGraphicsModuleMain.cpp  IEMonitor.hpp  IEPipeline.cpp  IEPipeline.hpp  IERenderEngine.cpp  IERenderEngine.hpp  IERenderPass.cpp  IERenderPass.hpp  IERenderable.cpp  IERenderable.hpp  IERenderableSettings.cpp  IERenderableSettings.hpp  IESettings.cpp  IESettings.hpp  IEShader.cpp  IEShader.hpp  IEUniformBufferObject.hpp  IEVersion.cpp  IEVersion.hpp  IEVertex.cpp  IEVertex.hpp  RenderEngine.cpp  RenderEngine.hpp  Settings.hpp  main.cpp
src/GraphicsModule/API/: API.cpp  API.hpp  Version.cpp  Version.hpp
src/GraphicsModule/Buffer/: Buffer.cpp  Buffer.hpp  BufferOpenGL.cpp  BufferOpenGL.hpp  BufferVulkan.cpp  BufferVulkan.hpp  IEAccelerationStructure.cpp  IEAccelerationStructure.hpp  IEBuffer.cpp  IEBuffer.hpp
src/GraphicsModule/Camera/: Camera.cpp  Camera.hpp  IECamera.cpp  IECamera.hpp
src/GraphicsModule/CommandBuffer/: CommandBuffer.cpp  CommandBuffer.hpp  CommandPool.cpp  CommandPool.hpp  (+8 more)
src/IOModule/: CMakeLists.txt  IOModuleMain.cpp  IeKeyboard.hpp
src/InputModule/: CMakeLists.txt  IEInputModuleMain.cpp  IEKeyboard.cpp  IEKeyboard.hpp  IeKeyboard.hpp  InputEngine.cpp  InputEngine.hpp  Keyboard.cpp  Keyboard.hpp
src/LogModule/: CMakeLists.txt  IELogModuleMain.cpp  Log.hpp
src/MotionEngine/: KinematicsBody.hpp
src/PhysicsEngine/: PhysicsBody.hpp  PhysicsCollision.hpp  PhysicsMesh.hpp  PhysicsWorld.hpp  physics.hpp
src/ScriptingModule/: CMakeLists.txt  CSharpScript.cpp  CSharpScript.hpp  IEScript.cpp  IEScript.hpp  JavaScript.cpp  JavaScript.hpp  LuaScript.cpp  LuaScript.hpp  PythonScript.cpp  PythonScript.hpp  Script.cpp  Script.hpp  ScriptEngine.cpp  ScriptEngine.hpp  SharedObjectScript.cpp  SharedObjectScript.hpp
src/Shaders/: fragmentShader.frag  fragmentShader.glsl  raygen.rgen  vertexShader.glsl
(+2347 files in other folders)
